Bug 422088 - Can't type in Wayland
Summary: Can't type in Wayland
Status: RESOLVED FIXED
Alias: None
Product: ktouch
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.5
Platform: Flatpak Linux
: HI normal
Target Milestone: ---
Assignee: Sebastian Gottfried
URL:
Keywords: wayland-only
: 430338 431747 442488 446152 447618 451604 458781 467606 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-26 09:40 UTC by Chris Lane
Modified: 2024-03-09 10:20 UTC (History)
21 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Lane 2020-05-26 09:40:18 UTC
SUMMARY
I am unable to get past the "Welcome to Typewriting Trainer" screen when the app is running with Wayland since I cannot select the "Name" text field.

STEPS TO REPRODUCE
1. Use Wayland
2. `QT_QPA_PLATFORM=wayland ktouch`
3. Attempt to type in the "Name" text field in the welcome prompt

OBSERVED RESULT
Unable to type in the "Name" text field in the welcome prompt.

EXPECTED RESULT
Able to type in the "Name" text field in the welcome prompt.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux 5.6.14
Qt: 5.14.2
Wayland: 1.18.0
qt5-wayland: 5.14.2
Sway: 1.4-9b5895be (May 18 2020, branch 'master')

ADDITIONAL INFORMATION
1. Log for Wayland run: https://gist.github.com/ChrisLane/3807881c82874f8b12703561cb5faec0
2. When running with `QT_QPA_PLATFORM=xcb ktouch` to force XWayland to be used, the text field can be used. Log: https://gist.github.com/ChrisLane/e31fa9e1b2c28ef524d3f9b80aebef57
Comment 1 Alex Bradatan 2020-12-10 17:15:29 UTC
I encountered the same problem using the flatpak version (20.08.3) on wayland with GNOME 3.38.2 on Fedora 33.
Comment 2 twinshadows404 2020-12-24 00:58:18 UTC
*** Bug 430338 has been marked as a duplicate of this bug. ***
Comment 3 twinshadows404 2020-12-24 01:02:03 UTC
It's not just the name. Ktouch doesn't accept any input on Wayland
Comment 4 Vasiliy Glazov 2020-12-25 07:46:34 UTC
I have the same issue on Fedora with  20.08.3 and 20.12.0 versions.
Comment 5 pakueamb 2021-09-02 18:59:25 UTC
I just moved from Fedora 33 with Xorg to Fedora 34 with Wayland and found out about this issue. Shame because it's the best Linux typing tutor IMO but I can't use it on my current system.
Comment 6 Paul Worrall 2021-09-15 19:53:23 UTC
*** Bug 442488 has been marked as a duplicate of this bug. ***
Comment 7 Ariel 2021-10-27 21:54:12 UTC
Same here KDE Plasma 5.23.2 on ArchLinux.

A workaround that worked for me:

  QT_QPA_PLATFORM=xcb ktouch
Comment 8 Paul Worrall 2021-11-27 12:18:38 UTC
*** Bug 446152 has been marked as a duplicate of this bug. ***
Comment 9 twinshadows404 2022-02-18 13:20:32 UTC
*** Bug 447618 has been marked as a duplicate of this bug. ***
Comment 10 twinshadows404 2022-02-18 13:20:51 UTC
*** Bug 431747 has been marked as a duplicate of this bug. ***
Comment 11 aTosser 2022-04-07 08:42:57 UTC
*** Bug 451604 has been marked as a duplicate of this bug. ***
Comment 12 Hervy Qurrotul Ainur Rozi 2022-05-22 00:07:25 UTC
Same here ktouch 22.04.1 on voidlinux.
Comment 13 Sylvain 2022-10-31 12:53:10 UTC
*** Bug 458781 has been marked as a duplicate of this bug. ***
Comment 14 Steve 2023-03-08 03:04:47 UTC
Same issue on Fedora 37 SilverBlue Kinoite....using KTouch 22.12.3 Released 2023-03-02. The suggested fix is unclear so wasn't applied
Comment 15 Steve 2023-03-12 08:09:15 UTC
Applied todays 5 meg update, from Fedora Discovery still no joy on K-Touch....if the name is double clicked it takes you to the program but allows no input. The only response is a flashing blue circle around the F Key.....Fedora 37 SilverBlue Kinoite
Comment 16 Paul Worrall 2023-03-20 13:19:12 UTC
*** Bug 467606 has been marked as a duplicate of this bug. ***
Comment 17 Simon M 2023-03-25 18:37:07 UTC
*** This bug has been confirmed by popular vote. ***
Comment 18 Bug Janitor Service 2023-09-30 05:05:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/ktouch/-/merge_requests/29
Comment 19 Bug Janitor Service 2023-10-02 18:02:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/ktouch/-/merge_requests/30
Comment 20 Aleix Pol 2023-10-05 23:43:12 UTC
Git commit 376a36baa0e11a9b96e529c194fa48e023aa8153 by Aleix Pol Gonzalez, on behalf of J. T. Elscott.
Committed on 06/10/2023 at 01:07.
Pushed by apol into branch 'master'.

Replace createWindowContainer with QQuickWidget

Previously ktouch used createWindowContainer with a QQuickView, which
broke Wayland support due to platform-specific behavior apparently
involving keyboard focus.

M  +4    -4    src/ktouchcontext.cpp
M  +3    -3    src/ktouchcontext.h
M  +8    -9    src/mainwindow.cpp
M  +3    -3    src/mainwindow.h

https://invent.kde.org/education/ktouch/-/commit/376a36baa0e11a9b96e529c194fa48e023aa8153
Comment 21 g440 2024-03-09 10:17:31 UTC
still broken on plasma 6 on Arch Linux (V: 23.08.5)
Comment 22 g440 2024-03-09 10:20:14 UTC
Sorry, only broken on flatpak, native package is fixed