Replace createWindowContainer with QQuickWidget

Previously ktouch used createWindowContainer with a QQuickView, which
broke Wayland support due to platform-specific behavior apparently
involving keyboard focus.

BUG: 422088